    Fixed a bug with planks (other than oak planks) outputting an oak button instead of the specified variant (this will cause some issues with the advancements!)
    Added Landmines! Be careful when playing in survival mode with this mod or you WILL get blown up!
    Added Buoys to the oceans (they're made of rusty iron)
    Added pressure plate and buttons made of grass and dirt.

1.1 Test 2:
    Improved the generation of starter houses and landmines (they only spawn on blocks that have air above them).
    Added stone and dirt landmines.
    My structures can now generate in dimensions where overworld blocks are present (like The DU and Cavern's cave dimensions).
    Added the deep void dimension
    Added void dungeons (They come in small, medium, and large variants)
    Added void towers
    Added Void Stone
    Added Void Ores
    Added Void Stone Bricks and stairs variant
    Added Polished Void Stone
    Added Void Stone Button and Void Stone Pressure Plate
    Added Void Stone Wall

1.1 Test 3:
    Fixed an annoying bug with dimension teleportation
    Added Regeneration Stone
    Added Void Pearl
    Added Void Pearl Ore
    Added Void Pearl Block
    Added a config file
    Brick Pyramids are no longer limited to ocean biomes
    The mod now shows its newest version
    The version of my mod now ships with the resource pack by default
    Added more advancements

1.1 (Resurrection Update):
    Fixed some bugs with pick-blocking the doors
    Added recipe for void furnace
    Gave Regeneration Stone, Void Pearl, Void Pearl Block, and Void Pearl Ore display names
    Added Player Head Temples and Giant Grass Blocks (must be enabled from the config)
    Crystals can no longer generate on top of liquids
    Improved world generation in the Deep Underground
1.1.1:
    Fixed a bug with diamond crystal generating in the deep void and deep underground
1.2:
    Added biomes to Deep Underground